# toolneuron-accessibility-cn

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  VERSION  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: build-apk.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/dark/tool_neuron/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/dark/tool_neuron/service/: IDiffusionGenerationCallback.aidl  IGgufGenerationCallback.aidl  ILLMService.aidl  IModelLoadCallback.aidl
app/src/main/assets/: default_personality.json
app/src/main/java/com/dark/tool_neuron/: NVApplication.kt
app/src/main/java/com/dark/tool_neuron/activity/: MainActivity.kt  ModelLoadingActivity.kt  ModelPickerActivity.kt  RagActivity.kt  RagDataReaderActivity.kt
app/src/main/java/com/dark/tool_neuron/data/: AppSettingsDataStore.kt  SetupDataStore.kt  TagConstants.kt  UmsMigrationEngine.kt  VaultManager.kt  dataStore.kt
app/src/main/java/com/dark/tool_neuron/database/: AppDatabase.kt
app/src/main/java/com/dark/tool_neuron/di/: AppContainer.kt  HiltModules.kt
app/src/main/java/com/dark/tool_neuron/engine/: DiffusionEngine.kt  EmbeddingEngine.kt  GGUFEngine.kt
app/src/main/java/com/dark/tool_neuron/global/: AppPaths.kt  DeviceTuner.kt  FormattingUtils.kt  HardwareScanner.kt  Standards.kt
app/src/main/java/com/dark/tool_neuron/i18n/: TnI18n.kt
app/src/main/java/com/dark/tool_neuron/models/: ModelType.kt
app/src/main/java/com/dark/tool_neuron/network/: HuggingFaceApi.kt  HuggingFaceClient.kt
app/src/main/java/com/dark/tool_neuron/neuron_example/: ChunkSearchIndex.kt  NeuronGraph.kt  RetrievalPipeline.kt
app/src/main/java/com/dark/tool_neuron/plugins/: CalculatorPlugin.kt  DateTimePlugin.kt  DevUtilsPlugin.kt  FileManagerPlugin.kt  NotePadPlugin.kt  PluginManager.kt  SystemInfoPlugin.kt  WebSearchPlugin.kt
app/src/main/res/drawable/: ai_model.xml  chats.xml  clock.xml  code.xml  copy.xml  dimensions.xml  down.xml  error.xml  generated.xml  load_model.xml  memory_vault.xml  menu.xml  prompt.xml  rag.xml  scheduler.xml  send_chat.xml  settings.xml  smart_temp_message.xml  speed.xml  steps.xml  thinking.xml  timer.xml  tool.xml  tools.xml  up.xml  user.xml  vl_models.xml  volume.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: accessibility_config.xml  accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  device_admin_receiver.xml  file_paths.xml  network_security_config.xml  voice_interaction_service.xml
app/src/test/java/com/dark/tool_neuron/: ExampleUnitTest.kt
docs/: MemoryVault.MD  PROJECT_GOVERNANCE.md  UPSTREAM_ATTRIBUTION.md
docs/releases/: v2.0.0-a11y-zh.1.md  v2.0.0-a11y-zh.2.md
file_ops/: README.md  build.gradle.kts  consumer-rules.pro
file_ops/src/androidTest/java/com/dark/file_ops/: ExampleInstrumentedTest.kt
file_ops/src/main/cpp/: CMakeLists.txt  io_engine.cpp  io_engine.h  path_guard.cpp  path_guard.h
file_ops/src/test/java/com/dark/file_ops/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/: ai_supertonic_tts-release.aar
memory-vault/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
memory-vault/src/androidTest/java/com/memoryvault/: ExampleInstrumentedTest.kt
memory-vault/src/main/java/com/memoryvault/: BackupManager.kt  MemoryVault.kt  MigrationListener.kt  VaultItem.kt
memory-vault/src/main/java/com/memoryvault/core/: Block.kt  BlockHeader.kt  BlockMetadata.kt  BlockReader.kt  BlockType.kt  BlockWriter.kt  CompressionUtils.kt  ContentProcessor.kt  EncryptionManager.kt  FreeSpaceManager.kt  FullTextIndex.kt  IndexSerializer.kt  MigrationManager.kt  MigrationResult.kt  TextTokenizer.kt  VaultFile.kt  VaultHeader.kt  VaultIndex.kt  VaultStats.kt  VectorIndex.kt  VectorUtils.kt  WALManager.kt  WALOperation.kt
memory-vault/src/test/java/com/memoryvault/: ExampleUnitTest.kt
neuron-packet/: SETUP.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
neuron-packet/src/androidTest/java/com/neuronpacket/: ExampleInstrumentedTest.kt
neuron-packet/src/main/cpp/: CMakeLists.txt  neuronpacket.cpp
neuron-packet/src/main/cpp/crypto/: aes_gcm.cpp  aes_gcm.h  bcrypt.cpp  bcrypt.h  crypto_common.h  pbkdf2.cpp  pbkdf2.h  sha256.cpp  sha256.h
neuron-packet/src/main/cpp/packet/: acl_entry.cpp  acl_entry.h  neuron_header.cpp  neuron_header.h  packet_io.cpp  packet_io.h
neuron-packet/src/main/cpp/utils/: byte_buffer.cpp  byte_buffer.h
neuron-packet/src/main/java/com/neuronpacket/: Models.kt  NeuronPacketManager.kt  NeuronPacketNative.kt
neuron-packet/src/test/java/com/neuronpacket/: ExampleUnitTest.kt
system_encryptor/: README.md  build.gradle.kts  consumer-rules.pro
system_encryptor/src/androidTest/java/com/dark/system_encryptor/: ExampleInstrumentedTest.kt
system_encryptor/src/main/cpp/: CMakeLists.txt  crypto_engine.cpp  crypto_engine.h  memory_guard.cpp  memory_guard.h  system_encryptor.cpp
system_encryptor/src/main/java/com/dark/system_encryptor/: SystemEncryptor.kt
system_encryptor/src/test/java/com/dark/system_encryptor/: ExampleUnitTest.kt
ums/: README.md  build.gradle.kts  consumer-rules.pro
ums/src/androidTest/java/com/dark/ums/: ExampleInstrumentedTest.kt
ums/src/main/cpp/: CMakeLists.txt  collection.cpp  collection.h  index.cpp  index.h  manifest.cpp  manifest.h  ums.cpp  wal.cpp  wal.h  wire_format.cpp  wire_format.h
ums/src/main/java/com/dark/ums/: UnifiedMemorySystem.kt
ums/src/test/java/com/dark/ums/: ExampleUnitTest.kt
(+146 files in other folders)
